[tool.poetry]
name = "flaskserver"
version = "0.1.0"
description = "Flask server"
authors = ["Tu Nombre <tu@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.packages]
include = ["flaskserver"]  # Aquí asegúrate de que tu carpeta de código esté incluida
